<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Giftox</string>
    <string name="default_notification_channel_id">182474</string>
    <string name="facebook_app_id">985474125629348</string>
    <string name="fb_login_protocol_scheme">fb985474125629348</string>
    <string name="surprise_your_loved_ones">Do you want to surprise your loved ones with a cool gift?</string>
    <string name="try_giftox">Try <font color='#56C5C7'>giftox!</font></string>
    <string name="on_boarding_label_giftox">giftox !</string>
    <string name="select_your_giftox">Select your giftox</string>
    <string name="giftox_video">Giftox Video</string>
    <string name="insta_like_and_comment"><![CDATA[Insta Like & Comment]]></string>
    <string name="fb_like_and_comment"><![CDATA[FB Like & Comment]]></string>
    <string name="twitter_like_and_comment"><![CDATA[Twitter Like & Comment]]></string>
    <string name="follow_me">Follow me</string>
    <string name="choose_your_celebrity">Choose your celebrity</string>
    <string name="for_various_categories">For various categories</string>
    <string name="skip">skip</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="orders">Orders</string>
    <string name="support">Support</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="giftox">giftox</string>
    <string name="insta_like_comment">Insta Like/Comment</string>
    <string name="fb_like_comment">FB Like/Comment</string>
    <string name="twitter_like_comment">Twitter Like/Comment</string>
    <string name="customize_giftox">Customize giftox</string>
    <string name="bottom_nav_search">search</string>
    <string name="bottom_nav_gift">gift</string>
    <string name="bottom_nav_profile">profile</string>
    <string name="to">To</string>
    <string name="email">Email</string>
    <string name="occasion">Occasion</string>
    <string name="special_wishes">Special Wishes</string>
    <string name="next">Next</string>
    <string name="social_media">Social Media</string>
    <string name="link">Link</string>
    <string name="select_at_least_one_product">Select at least one product.</string>
    <string name="_continue">Continue</string>
    <string name="find_the_right_celebrity_for_you">Find the right celebrity for you…</string>
    <string name="category">Category</string>
    <string name="price">Price</string>
    <string name="dollar_value">$%1$s</string>
    <string name="dollar_sign">$</string>
    <string name="_10_dollars">$10</string>
    <string name="_200_dollars">$200</string>
    <string name="country">Country</string>
    <string name="select_your_country">Select your country</string>
    <string name="clear">Clear</string>
    <string name="apply">Apply</string>
    <string name="select_country">Select Country</string>
    <string name="select_platform">Select Platform</string>
    <string name="total">Total</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the Terms and Conditions</string>
    <string name="i_am_ok_with_making_this_video_public" tools:ignore="Typos">I am ok with making this video public</string>
    <string name="check_out">Check out</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="new_to_gitox_sign_me_up">New to gitox, sign me up!</string>
    <string name="are_you_a_celebrity_join_us">Are you a Celebrity? Join Us</string>
    <string name="or">OR</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="welcome">welcome</string>
    <string name="please_fill_in_the_complete_details_in_the_form_below">Please fill in the complete details\nin the form below</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birthday">Birthday</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="description">Description</string>
    <string name="receive_newsletter_or_marketing_material">Receive Newsletter or Marketing Material</string>
    <string name="register">Register</string>
    <string name="error_email_required">Email is required!</string>
    <string name="error_email_invalid">Email is invalid!</string>
    <string name="error_password_required">Password is required!</string>
    <string name="error_password_length">The password must be at least 8 characters!</string>
    <string name="error_passwords_do_not_match">Passwords do not match!</string>
    <string name="error_required">required!</string>
    <string name="error_birthday_required">Birthday is required!</string>
    <string name="error_country_required">Country is required!</string>
    <string name="error_gender_required">Gender is required!</string>
    <string name="error_category_required">Please select at least one category!</string>
    <string name="error_terms_and_conditions_not_checked">Please agree to the Terms and Conditions!</string>
    <string name="error_select_social_media_type">Please select platform!</string>
    <string name="error_enter_social_media_link">Please enter link for your platform!</string>
    <string name="error_select_occasion">Please select the occasion!</string>
    <string name="my_passwords">My Passwords</string>
    <string name="my_personal_info">My Personal Info</string>
    <string name="my_portfolio">My Portfolio</string>
    <string name="new_password">New Password</string>
    <string name="retype_new_password">Retype New Password</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="promo_video">Promo Video</string>
    <string name="cover_photo">Cover Photo</string>
    <string name="price_of_services">Price of Services</string>
    <string name="order">Order</string>
    <string name="date">Date</string>
    <string name="you_ve_made">You\'ve Made:</string>
    <string name="type">Type</string>
    <string name="status">Status</string>
    <string name="edit">Edit</string>
    <string name="confirm_logout_message">Are you sure you want to logout?</string>
    <string name="write_review">Write Review</string>
    <string name="submit">Submit</string>
    <string name="error_add_a_rating">Please add a rating!</string>
</resources>