<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBlue">

    <ImageView
        android:id="@+id/giftIconIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:contentDescription="@null"
        android:src="@drawable/ic_gift"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelSelectYourGiftox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gilroy_extra_bold"
        android:gravity="center"
        android:text="@string/select_your_giftox"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toTopOf="@id/itemsBackgroundIv"
        app:layout_constraintTop_toBottomOf="@+id/giftIconIv" />

    <ImageView
        android:id="@+id/itemsBackgroundIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/ic_on_boarding_page_3_gradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelGiftoxVideo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_12ssp"
        android:drawablePadding="@dimen/_15sdp"
        android:fontFamily="@font/gilroy_light"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_32sdp"
        android:text="@string/giftox_video"
        android:textColor="@android:color/white"
        app:drawableEndCompat="@drawable/ic_check_on_blue"
        app:drawableStartCompat="@drawable/ic_giftox_video_on"
        app:layout_constraintBottom_toTopOf="@id/labelInstaLikeAndComment"
        app:layout_constraintEnd_toEndOf="@id/itemsBackgroundIv"
        app:layout_constraintStart_toStartOf="@id/itemsBackgroundIv" />

    <TextView
        android:id="@+id/labelInstaLikeAndComment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_12ssp"
        android:drawablePadding="@dimen/_15sdp"
        android:fontFamily="@font/gilroy_light"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_32sdp"
        android:text="@string/insta_like_and_comment"
        android:textColor="@android:color/white"
        app:drawableEndCompat="@drawable/ic_check_on_blue"
        app:drawableStartCompat="@drawable/ic_insta_like_on"
        app:layout_constraintBottom_toTopOf="@id/labelFbLikeAndComment"
        app:layout_constraintEnd_toEndOf="@id/itemsBackgroundIv"
        app:layout_constraintStart_toStartOf="@id/itemsBackgroundIv" />

    <TextView
        android:id="@+id/labelFbLikeAndComment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_12sdp"
        android:drawablePadding="@dimen/_15sdp"
        android:fontFamily="@font/gilroy_light"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_32sdp"
        android:text="@string/fb_like_and_comment"
        android:textColor="@android:color/white"
        app:drawableEndCompat="@drawable/ic_check_on_blue"
        app:drawableStartCompat="@drawable/ic_fb_like_on"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/itemsBackgroundIv"
        app:layout_constraintStart_toStartOf="@id/itemsBackgroundIv"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelTwitterLikeAndComment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12ssp"
        android:drawablePadding="@dimen/_15sdp"
        android:fontFamily="@font/gilroy_light"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_32sdp"
        android:text="@string/twitter_like_and_comment"
        android:textColor="@android:color/white"
        app:drawableEndCompat="@drawable/ic_check_on_blue"
        app:drawableStartCompat="@drawable/ic_twitter_like_on"
        app:layout_constraintEnd_toEndOf="@id/itemsBackgroundIv"
        app:layout_constraintStart_toStartOf="@id/itemsBackgroundIv"
        app:layout_constraintTop_toBottomOf="@id/labelFbLikeAndComment" />

    <TextView
        android:id="@+id/labelFollowMe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12ssp"
        android:drawablePadding="@dimen/_15sdp"
        android:fontFamily="@font/gilroy_light"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_32sdp"
        android:text="@string/follow_me"
        android:textColor="@android:color/white"
        app:drawableEndCompat="@drawable/ic_check_on_blue"
        app:drawableStartCompat="@drawable/ic_follow_me_on"
        app:layout_constraintEnd_toEndOf="@id/itemsBackgroundIv"
        app:layout_constraintStart_toStartOf="@id/itemsBackgroundIv"
        app:layout_constraintTop_toBottomOf="@id/labelTwitterLikeAndComment" />

</androidx.constraintlayout.widget.ConstraintLayout>